fix(symbol-search): fix navbar overlapping

--- a/resources/assets/js/Components/SymbolSearch/index.styl
+++ b/resources/assets/js/Components/SymbolSearch/index.styl
@@ -4,6 +4,10 @@
   position fixed
   top 0
   right 10%
+  z-index 1001
+  background-color #f8f8f8
+  border 1px solid #e7e7e7
+  padding 5px
 
   &__found-symbol
     background-color yellow
